--- a/amit_logins/templates/logins/base.html
+++ b/amit_logins/templates/logins/base.html
@@ -9,6 +9,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
       position: relative;
       background-image:
         linear-gradient(rgba(15, 23, 42, 0.6), rgba(15, 23, 42, 0.8)),
-        url("{% static 'images/bg.jpg' %}");
+        url("{% static 'images/REN1.webp' %}");
       background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
